--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=adiddb.c7i8m8uwun4h.ap-south-1.rds.amazonaws.com
+DB_HOST=shirt-database.c9couwe8qvtb.ap-south-1.rds.amazonaws.com
 DB_USER=admin
-DB_PASSWORD=MySQL200329
-DB_NAME=AdidasStore
+DB_PASSWORD=password
+DB_NAME=store
 SESSION_SECRET=04db919c83e03a5972d5db72bf460b68
